[package]
name = "collide"
version = "0.1.0"
authors = ["Jakub Kądziołka <kuba@kadziolka.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.0.0"
bitvec = "0.22.3"
hex = "0.4.3"
itertools = "0.10.0"
rayon = "1.5.1"
